Added redis, rabbitMQ, Promethues to the project

--- a/company-service/pom.xml
+++ b/company-service/pom.xml
@@ -107,6 +107,21 @@
             <version>3.24.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- RabbitMQ -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <!-- Prometheus -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
 
         <!-- JSON处理（你项目里已经有jackson了，可以不用加） -->
         <!-- 下面是可选，如果你需要更丰富的JSON测试支持 -->
