--- a/company-service/src/main/resources/application.yml
+++ b/company-service/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
       show-sql: false
       hibernate:
         ddl-auto: none
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 eureka:
   client:
@@ -25,3 +30,11 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl  # ??SQL?????
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,prometheus
+  metrics:
+    tags:
+      application: company-service # 每个服务不同命名
