--- a/jobseeker-service/pom.xml
+++ b/jobseeker-service/pom.xml
@@ -57,6 +57,21 @@
 			<artifactId>mybatis-plus-boot-starter</artifactId>
 			<version>3.5.5</version>
 		</dependency>
+		<!-- RabbitMQ -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+		<!-- Prometheus -->
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 
 
 		<!-- MySQL Driver -->
