--- a/jobseeker-service/src/main/resources/application.yml
+++ b/jobseeker-service/src/main/resources/application.yml
@@ -12,8 +12,23 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,prometheus
+  metrics:
+    tags:
+      application: jobseeker-service # 每个服务不同命名
+
